--- a/App.Client/Views/Shared/_Layout.cshtml
+++ b/App.Client/Views/Shared/_Layout.cshtml
@@ -1,17 +1,17 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <partial name="Partials/Head.cshtml" />
+    <partial name="Partials/_Head.cshtml" />
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
     @RenderBody()
 
     <footer class="ftco-footer ftco-section">
-        <partial name="Partials/Footer.cshtml" />
+        <partial name="Partials/_Footer.cshtml" />
     </footer>
 
-    <partial name="Partials/Loader.cshtml" />
+    <partial name="Partials/_Loader.cshtml" />
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
