--- a/App.Client/Views/Home/Index/_Hero.cshtml
+++ b/App.Client/Views/Home/Index/_Hero.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="home-slider  owl-carousel">
+﻿@model AboutMeViewModel
+
+<div class="home-slider  owl-carousel">
     <div class="slider-item ">
         <div class="overlay"></div>
         <div class="container">
