--- a/App.Client/Views/Shared/_Layout.cshtml
+++ b/App.Client/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <partial name="Partials/_Head.cshtml" />
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-
+    <partial name="Partials/_Navbar.cshtml" />
     @RenderBody()
 
     <footer class="ftco-footer ftco-section">
