--- a/App.Client/Views/Home/Index/_AboutMe.cshtml
+++ b/App.Client/Views/Home/Index/_AboutMe.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="container">
+﻿@model AboutMeViewModel
+
+<div class="container">
     <div class="row d-flex">
         <div class="col-md-6 col-lg-5 d-flex">
             <div class="img-about img d-flex align-items-stretch">
