--- a/App.Client/Views/Home/Index/_BlogPosts.cshtml
+++ b/App.Client/Views/Home/Index/_BlogPosts.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="container">
+﻿@model IEnumerable<BlogPostViewModel>
+
+<div class="container">
     <div class="row justify-content-center mb-5 pb-5">
         <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Blog</h1>
