--- a/App.Client/Views/Home/Index/_Contact.cshtml
+++ b/App.Client/Views/Home/Index/_Contact.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="container">
+﻿@model ContactMessageViewModel
+
+<div class="container">
     <div class="row justify-content-center mb-5 pb-3">
         <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
@@ -7,64 +9,30 @@
         </div>
     </div>
 
-    <div class="row d-flex contact-info mb-5">
-        <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-            <div class="align-self-stretch box p-4 text-center">
-                <div class="icon d-flex align-items-center justify-content-center">
-                    <span class="icon-map-signs"></span>
-                </div>
-                <h3 class="mb-4">Address</h3>
-                <p>198 West 21th Street, Suite 721 New York NY 10016</p>
-            </div>
-        </div>
-        <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-            <div class="align-self-stretch box p-4 text-center">
-                <div class="icon d-flex align-items-center justify-content-center">
-                    <span class="icon-phone2"></span>
-                </div>
-                <h3 class="mb-4">Contact Number</h3>
-                <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
-            </div>
-        </div>
-        <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-            <div class="align-self-stretch box p-4 text-center">
-                <div class="icon d-flex align-items-center justify-content-center">
-                    <span class="icon-paper-plane"></span>
-                </div>
-                <h3 class="mb-4">Email Address</h3>
-                <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
-            </div>
-        </div>
-        <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-            <div class="align-self-stretch box p-4 text-center">
-                <div class="icon d-flex align-items-center justify-content-center">
-                    <span class="icon-globe"></span>
-                </div>
-                <h3 class="mb-4">Website</h3>
-                <p><a href="#">yoursite.com</a></p>
-            </div>
-        </div>
-    </div>
-
     <div class="row no-gutters block-9">
         <div class="col-md-6 order-md-last d-flex">
-            <form action="#" class="bg-light p-4 p-md-5 contact-form">
+            <form asp-action="SubmitContactMessage" class="bg-light p-4 p-md-5 contact-form" method="post">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Your Name">
+                    <input type="text" class="form-control" placeholder="Your Name" asp-for="Name" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Your Email">
+                    <input type="email" class="form-control" placeholder="Your Email" asp-for="Email" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Subject">
+                    <input type="text" class="form-control" placeholder="Subject" asp-for="Subject" />
+                    <span asp-validation-for="Subject" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+                    <textarea asp-for="Message" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+                    <span asp-validation-for="Message" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+                    <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5" />
                 </div>
             </form>
+
 
         </div>
 
