--- a/App.Client/Views/Home/Index/_Projects.cshtml
+++ b/App.Client/Views/Home/Index/_Projects.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="container">
+﻿@model IEnumerable<ProjectViewModel>
+
+<div class="container">
     <div class="row justify-content-center pb-5">
         <div class="col-md-12 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
