--- a/App.Client/Views/Home/Index/_Resume.cshtml
+++ b/App.Client/Views/Home/Index/_Resume.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="container">
+﻿@model IEnumerable<ExperienceViewModel>
+
+<div class="container">
     <div class="row justify-content-center pb-5">
         <div class="col-md-10 heading-section text-center ftco-animate">
             <h1 class="big big-2">Resume</h1>
