NToastNotify, Exception Handling implemented. Fixed request to Data.Api.

--- a/App.Client/Views/Shared/_Layout.cshtml
+++ b/App.Client/Views/Shared/_Layout.cshtml
@@ -13,5 +13,6 @@
 
     <partial name="Partials/_Loader.cshtml" />
     @await RenderSectionAsync("Scripts", required: false)
+    @await Component.InvokeAsync("NToastNotify")
 </body>
 </html>
