Login, Register, ForgotPassword view added.

--- a/App.Client/wwwroot/css/style.css
+++ b/App.Client/wwwroot/css/style.css
@@ -59,6 +59,9 @@ body {
   text-align: left;
   background-color: #fff; }
 
+#login-section {
+    margin-top: 100px; 
+}
 [tabindex="-1"]:focus {
   outline: 0 !important; }
 
