--- a/App.Client/Views/Shared/Partials/_Navbar.cshtml
+++ b/App.Client/Views/Shared/Partials/_Navbar.cshtml
@@ -15,6 +15,30 @@
                 <li class="nav-item"><a href="index.html#projects-section" class="nav-link"><span>Projects</span></a></li>
                 <li class="nav-item"><a href="index.html#blog-section" class="nav-link"><span>My Blog</span></a></li>
                 <li class="nav-item"><a href="index.html#contact-section" class="nav-link"><span>Contact</span></a></li>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Account
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="userDropdown">
+                            <a class="dropdown-item" asp-controller="Auth" asp-action="Details">Profile</a>
+                            <a class="dropdown-item" asp-controller="Auth" asp-action="Logout">Logout</a>
+                        </div>
+                    </li>
+                }
+                else
+                {
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="authDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Login/Register
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="authDropdown">
+                            <a class="dropdown-item" asp-controller="Auth" asp-action="Login">Login</a>
+                            <a class="dropdown-item" asp-controller="Auth" asp-action="Register">Register</a>
+                        </div>
+                    </li>
+                }
             </ul>
         </div>
     </div>
