--- a/App.Client/Views/Home/Index/_Hero.cshtml
+++ b/App.Client/Views/Home/Index/_Hero.cshtml
@@ -1,37 +1,19 @@
-﻿@model AboutMeViewModel
+﻿@model PersonalInfoAboutMeViewModel
 
 <div class="home-slider  owl-carousel">
     <div class="slider-item ">
         <div class="overlay"></div>
         <div class="container">
             <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-                <div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_1.png);">
+                <div class="one-third js-fullheight order-md-last img" style="background-image:url(@Model.AboutMe.ImageUrl1);">
                     <div class="overlay"></div>
                 </div>
                 <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                     <div class="text">
                         <span class="subheading">Hello!</span>
-                        <h1 class="mb-4 mt-3">I'm <span>Clark Thompson</span></h1>
-                        <h2 class="mb-4">A Freelance Web Designer</h2>
-                        <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="slider-item">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-                <div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_2.png);">
-                    <div class="overlay"></div>
-                </div>
-                <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                    <div class="text">
-                        <span class="subheading">Hello!</span>
-                        <h1 class="mb-4 mt-3">I'm a <span>web designer</span> based in London</h1>
-                        <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+                        <h1 class="mb-4 mt-3">I'm <span>@(Model.PersonalInfo.FirstName + Model.PersonalInfo.LastName)</span></h1>
+                        <h2 class="mb-4">@Model.AboutMe.Title</h2>
+                        <p><a href="#contact-section" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
                     </div>
                 </div>
             </div>
