--- a/App.Client/Views/Home/Index/_Projects.cshtml
+++ b/App.Client/Views/Home/Index/_Projects.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<ProjectViewModel>
 
-<div class="container">
+<div class="container-fluid px-md-5">
     <div class="row justify-content-center pb-5">
         <div class="col-md-12 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
@@ -9,63 +9,17 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4">
-            <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
-                <div class="overlay"></div>
-                <div class="text text-center p-4">
-                    <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-                    <span>Web Design</span>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-8">
-            <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
-                <div class="overlay"></div>
-                <div class="text text-center p-4">
-                    <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-                    <span>Web Design</span>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-8">
-            <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
-                <div class="overlay"></div>
-                <div class="text text-center p-4">
-                    <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-                    <span>Web Design</span>
-                </div>
-            </div>
-
-            <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg);">
-                <div class="overlay"></div>
-                <div class="text text-center p-4">
-                    <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-                    <span>Web Design</span>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
-                        <div class="overlay"></div>
-                        <div class="text text-center p-4">
-                            <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-                            <span>Web Design</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
-                        <div class="overlay"></div>
-                        <div class="text text-center p-4">
-                            <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-                            <span>Web Design</span>
-                        </div>
+        @foreach (var project in Model)
+        {
+            <div class="col-md-4">
+                <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url('@project.ImageUrl');">
+                    <div class="overlay"></div>
+                    <div class="text text-center p-4">
+                        <h3><a href="#">@project.Title</a></h3>
+                        <span>@project.Description</span>
                     </div>
                 </div>
             </div>
-        </div>
+        }
     </div>
 </div>
