--- a/App.Client/Views/Home/Index/_Resume.cshtml
+++ b/App.Client/Views/Home/Index/_Resume.cshtml
@@ -5,55 +5,19 @@
         <div class="col-md-10 heading-section text-center ftco-animate">
             <h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6">
-            <div class="resume-wrap ftco-animate">
-                <span class="date">2014-2015</span>
-                <h2>Master Degree of Design</h2>
-                <span class="position">Cambridge University</span>
-                <p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+        @foreach (var item in Model)
+        {
+            <div class="col-md-6">
+                <div class="resume-wrap ftco-animate">
+                    <span class="date">@item.StartDate.ToString("yyyy")-@(item.EndDate.HasValue ? item.EndDate.Value.ToString("yyyy") : "Present")</span>
+                    <h2>@item.Title</h2>
+                    <span class="position">@item.Company</span>
+                    <p class="mt-4">@item.Description</p>
+                </div>
             </div>
-            <div class="resume-wrap ftco-animate">
-                <span class="date">2014-2015</span>
-                <h2>Bachelor's Degree of C.A</h2>
-                <span class="position">Cambridge University</span>
-                <p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-            </div>
-            <div class="resume-wrap ftco-animate">
-                <span class="date">2014-2015</span>
-                <h2>Diploma in Computer</h2>
-                <span class="position">Cambridge University</span>
-                <p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-            </div>
-        </div>
-
-        <div class="col-md-6">
-            <div class="resume-wrap ftco-animate">
-                <span class="date">2014-2015</span>
-                <h2>Art &amp; Creative Director</h2>
-                <span class="position">Cambridge University</span>
-                <p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-            </div>
-            <div class="resume-wrap ftco-animate">
-                <span class="date">2014-2015</span>
-                <h2>Wordpress Developer</h2>
-                <span class="position">Cambridge University</span>
-                <p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-            </div>
-            <div class="resume-wrap ftco-animate">
-                <span class="date">2017-2018</span>
-                <h2>UI/UX Designer</h2>
-                <span class="position">Cambridge University</span>
-                <p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-            </div>
-        </div>
-    </div>
-    <div class="row justify-content-center mt-5">
-        <div class="col-md-6 text-center ftco-animate">
-            <p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
-        </div>
+        }
     </div>
 </div>
