--- a/App.Client/Views/Auth/ForgotPassword.cshtml
+++ b/App.Client/Views/Auth/ForgotPassword.cshtml
@@ -18,8 +18,8 @@
                     <button type="submit" class="btn btn-primary">Send Password Reset Link</button>
                 </form>
                 <div class="mt-3">
-                    <a href="@Url.Action("Login", "Auth")" class="btn btn-link">Login</a>
-                    <a href="@Url.Action("Register", "Auth")" class="btn btn-link">Register</a>
+                    <a asp-action="Login" class="btn btn-link">Login</a>
+                    <a asp-action="Register" class="btn btn-link">Register</a>
                 </div>
             </div>
         </div>
