--- a/App.Client/Views/Auth/Login.cshtml
+++ b/App.Client/Views/Auth/Login.cshtml
@@ -24,8 +24,8 @@
                 </form>
 
                 <div class="mt-3">
-                    <a href="@Url.Action("ForgotPassword", "Auth")" class="btn btn-link">Forgot Password?</a>
-                    <a href="@Url.Action("Register", "Auth")" class="btn btn-link">Register</a>
+                    <a asp-action="ForgotPassword" class="btn btn-link">Forgot Password?</a>
+                    <a asp-action="Register" class="btn btn-link">Register</a>
                 </div>
 
             </div>
