--- a/App.Client/Views/Auth/Register.cshtml
+++ b/App.Client/Views/Auth/Register.cshtml
@@ -23,8 +23,8 @@
                     <button type="submit" class="btn btn-primary">Register</button>
                 </form>
                 <div class="mt-3">
-                    <a href="@Url.Action("Login", "Auth")" class="btn btn-link">Login</a>
-                    <a href="@Url.Action("ForgotPassword", "Auth")" class="btn btn-link">Forgot Password?</a>
+                    <a asp-action="Login" class="btn btn-link">Login</a>
+                    <a asp-action="ForgotPassword" class="btn btn-link">Forgot Password?</a>
                 </div>
             </div>
         </div>
