--- a/App.Client/Views/Home/Index/_BlogPosts.cshtml
+++ b/App.Client/Views/Home/Index/_BlogPosts.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<BlogPostViewModel>
 
     @{
-       
+    // var blogPosts = Model ?? new List<BlogPostViewModel>();
     }
 
 <div class="container">
@@ -17,13 +17,13 @@
         {
             <div class="col-md-4 d-flex ftco-animate">
                 <div class="blog-entry justify-content-end">
-                    <a href="" class="block-20" style="background-image: url('@post.ImageUrl');">
+                    <a href="@Url.Action("BlogPost", "Home", new { postId = post.Id })" class="block-20" style="background-image: url('@post.ImageUrl');">
                     </a>
                     <div class="text mt-3 float-right d-block">
                         <div class="d-flex align-items-center mb-3 meta">
                             <p class="mb-0">
                                 <span class="mr-2">@post.Date.ToString("MMMM dd, yyyy")</span>
-                                <a  class="mr-2">@post.Author</a>
+                                <a  class="mr-2">Admin</a>
                                 <a  class="meta-chat"><span class="icon-chat"></span> @post.Comments.Count</a>
                             </p>
                         </div>
