--- a/App.Client/Views/Home/Index/_Hero.cshtml
+++ b/App.Client/Views/Home/Index/_Hero.cshtml
@@ -5,13 +5,13 @@
         <div class="overlay"></div>
         <div class="container">
             <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-                <div class="one-third js-fullheight order-md-last img" style="background-image:url(@Model.AboutMe.ImageUrl1);">
+                <div class="one-third js-fullheight order-md-last img" style="background-image:url(../../../wwwroot/images/bg_1.png);">
                     <div class="overlay"></div>
                 </div>
                 <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                     <div class="text">
                         <span class="subheading">Hello!</span>
-                        <h1 class="mb-4 mt-3">I'm <span>@(Model.PersonalInfo.FirstName + Model.PersonalInfo.LastName)</span></h1>
+                        <h1 class="mb-4 mt-3">I'm <span>@(Model.PersonalInfo.FirstName) @(Model.PersonalInfo.LastName)</span></h1>
                         <h2 class="mb-4">@Model.AboutMe.Title</h2>
                         <p><a href="#contact-section" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
                     </div>
