--- a/App.Client/Views/Shared/Partials/_Footer.cshtml
+++ b/App.Client/Views/Shared/Partials/_Footer.cshtml
@@ -3,11 +3,9 @@
         <div class="col-md">
             <div class="ftco-footer-widget mb-4">
                 <h2 class="ftco-heading-2">About</h2>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <p>@ViewBag.AboutMe.Introduciton</p>
                 <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                    <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                    <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                    <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                    <li class="ftco-animate"><a href="https://www.linkedin.com/in/emre-inan-41570059/"><span class="icon-linkedin"></span></a></li>
                 </ul>
             </div>
         </div>
@@ -15,11 +13,11 @@
             <div class="ftco-footer-widget mb-4 ml-md-4">
                 <h2 class="ftco-heading-2">Links</h2>
                 <ul class="list-unstyled">
-                    <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
-                    <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
-                    <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
-                    <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
-                    <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
+                    <li><a href="#home-section"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
+                    <li><a href="#about-section"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
+                    <li><a href="#projects-section"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
+                    <li><a href="#contact-section"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
+
                 </ul>
             </div>
         </div>
@@ -40,22 +38,12 @@
                 <h2 class="ftco-heading-2">Have a Questions?</h2>
                 <div class="block-23 mb-3">
                     <ul>
-                        <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-                        <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-                        <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+                        <li><span class="icon icon-map-marker"></span><span class="text">@ViewBag.PersonalInfo.Address</span></li>
+                        <li><a href="tel:@ViewBag.PersonalInfo.PhoneNumber"><span class="icon icon-phone"></span><span class="text">@ViewBag.PersonalInfo.PhoneNumber</span></a></li>
+                        <li><a href="mailto:@ViewBag.PersonalInfo.Email"><span class="icon icon-envelope"></span><span class="text">@ViewBag.PersonalInfo.Email</span></a></li>
                     </ul>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12 text-center">
-
-            <p>
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
         </div>
     </div>
 </div>
