ProjectController added. ProjectService implemented.

--- a/App.Admin/Views/Shared/Partials/_Menu.cshtml
+++ b/App.Admin/Views/Shared/Partials/_Menu.cshtml
@@ -24,6 +24,52 @@
         <li class="menu-header small text-uppercase">
             <span class="menu-header-text">Pages</span>
         </li>
+        <!-- Pages -->
+        <li class="menu-item">
+            <a asp-action="AboutMe" class="menu-link">
+                <div>About Me</div>
+            </a>
+        </li>
+        <li class="menu-item">
+            <a asp-action="PersonalInfo" class="menu-link">
+                <div>Personal Info</div>
+            </a>
+        </li>
+        <li class="menu-item">
+            <a asp-action="Educations" class="menu-link">
+                <div>Educations</div>
+            </a>
+        </li>
+        <li class="menu-item">
+            <a asp-action="Experiences" class="menu-link">
+                <div>Experiences</div>
+            </a>
+        </li>
+        <li class="menu-item">
+            <a asp-action="Projects" asp-controller="Project" class="menu-link">
+                <div>Projects</div>
+            </a>
+        </li>
+        <li class="menu-item">
+            <a asp-action="BlogPosts" class="menu-link">
+                <div>Blog Posts</div>
+            </a>
+        </li>
+        <li class="menu-item">
+            <a asp-action="Comments" class="menu-link">
+                <div>Comments</div>
+            </a>
+        </li>
+        <li class="menu-item">
+            <a asp-action="ContactMessages" class="menu-link">
+                <div>Contact Messages</div>
+            </a>
+        </li>
+        <li class="menu-item">
+            <a asp-action="Users" class="menu-link">
+                <div>Users</div>
+            </a>
+        </li>
     </ul>
 </aside>
 <!-- / Menu -->
