--- a/App.Admin/Views/Shared/_Layout.cshtml
+++ b/App.Admin/Views/Shared/_Layout.cshtml
@@ -11,9 +11,19 @@
             <!-- Layout container -->
             <div class="layout-page">
                 <partial name="Partials/_Navbar.cshtml" />
-                 
+
                 <div class="content-wrapper">
-                @RenderBody()
+                    <div class="container-xxl flex-grow-1 container-p-y">
+                        <div class="row">
+                            <div class="col-lg-8 mb-4 order-0">
+                                <div class="card">
+                                    <div class="d-flex align-items-end row">
+                                        @RenderBody()
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
             </div>
