--- a/App.Admin/Views/Project/Projects.cshtml
+++ b/App.Admin/Views/Project/Projects.cshtml
@@ -8,8 +8,10 @@
 }
 
 
-<div class="container">
-        <p><a asp-action="Add" class="btn btn-primary mt-35" >Create New Project</a></p>
+<div class="container mt-3">
+    <div class="row">
+    
+        <p><a asp-action="Add" class="btn btn-primary mt-3" >Create New Project</a></p>
         <p>
             <button id="showActiveBtn" class="btn btn-secondary" onclick="showActive()" style="display:@(hasInactiveProjects ? "inline-block" : "none");">Show Active Projects</button>
             <button id="showInactiveBtn" class="btn btn-secondary" onclick="showInactive()" style="display:@(hasActiveProjects ? "inline-block" : "none");">Show Inactive Projects</button>
@@ -36,7 +38,7 @@
                         <td>
                             <a asp-action="Edit" asp-route-id="@project.Id">Edit</a> |
                             <a asp-action="MakeInActive" asp-route-id="@project.Id">Make Inactive</a> |
-                            <a asp-action="Delete" asp-route-id="@project.Id">Delete</a>
+                            <a asp-action="Delete" asp-route-id="@project.Id" onclick="return confirm('Are you sure you want to delete this experience?');">Delete</a>
                         </td>
                     </tr>
                 }
@@ -65,7 +67,7 @@
                         <td>
                             <a asp-action="Edit" asp-route-id="@project.Id">Edit</a> |
                             <a asp-action="MakeActive" asp-route-id="@project.Id">Make Active</a> |
-                            <a asp-action="Delete" asp-route-id="@project.Id">Delete</a>
+                            <a asp-action="Delete" asp-route-id="@project.Id" onclick="return confirm('Are you sure you want to delete this experience?');">Delete</a>
                         </td>
                     </tr>
                 }
@@ -73,6 +75,8 @@
         </table>
     </div>
 </div>
+</div>
+
 
 @section Scripts {
     <script>
