--- a/App.Admin/Views/Shared/_Layout.cshtml
+++ b/App.Admin/Views/Shared/_Layout.cshtml
@@ -15,16 +15,19 @@
                 <div class="content-wrapper">
                     <div class="container-xxl flex-grow-1 container-p-y">
                         <div class="row">
-                            <div class="col-lg-8 mb-4 order-0">
+                            <div class="col-12 mb-4">
                                 <div class="card">
                                     <div class="d-flex align-items-end row">
-                                        @RenderBody()
+                                        <div class="col-12">
+                                            @RenderBody()
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
 
             </div>
             <!-- / Layout page -->
