--- a/App.Admin/Views/Project/Projects.cshtml
+++ b/App.Admin/Views/Project/Projects.cshtml
@@ -8,10 +8,10 @@
 }
 
 
-<div class="container mt-3">
+<div class="container my-3">
     <div class="row">
     
-        <p><a asp-action="Add" class="btn btn-primary mt-3" >Create New Project</a></p>
+        <p><a asp-action="Add" class="btn btn-primary" >Create New Project</a></p>
         <p>
             <button id="showActiveBtn" class="btn btn-secondary" onclick="showActive()" style="display:@(hasInactiveProjects ? "inline-block" : "none");">Show Active Projects</button>
             <button id="showInactiveBtn" class="btn btn-secondary" onclick="showInactive()" style="display:@(hasActiveProjects ? "inline-block" : "none");">Show Inactive Projects</button>
@@ -36,9 +36,9 @@
                         <td>@project.Description</td>
                         <td>@project.ImageUrl</td>
                         <td>
-                            <a asp-action="Edit" asp-route-id="@project.Id">Edit</a> |
-                            <a asp-action="MakeInActive" asp-route-id="@project.Id">Make Inactive</a> |
-                            <a asp-action="Delete" asp-route-id="@project.Id" onclick="return confirm('Are you sure you want to delete this experience?');">Delete</a>
+                            <a asp-action="Edit" asp-route-id="@project.Id" >Edit</a> |
+                                <a asp-action="MakeInActive" asp-route-id="@project.Id" >Make Inactive</a> |
+                                <a asp-action="Delete" asp-route-id="@project.Id" onclick="return confirm('Are you sure you want to delete this experience?');">Delete</a>
                         </td>
                     </tr>
                 }
@@ -65,9 +65,9 @@
                         <td>@project.Description</td>
                         <td>@project.ImageUrl</td>
                         <td>
-                            <a asp-action="Edit" asp-route-id="@project.Id">Edit</a> |
-                            <a asp-action="MakeActive" asp-route-id="@project.Id">Make Active</a> |
-                            <a asp-action="Delete" asp-route-id="@project.Id" onclick="return confirm('Are you sure you want to delete this experience?');">Delete</a>
+                                <a asp-action="Edit" asp-route-id="@project.Id">Edit</a> |
+                                <a asp-action="MakeActive" asp-route-id="@project.Id">Make Active</a> |
+                                <a asp-action="Delete" asp-route-id="@project.Id" onclick="return confirm('Are you sure you want to delete this experience?');">Delete</a>
                         </td>
                     </tr>
                 }
