--- a/App.Admin/Views/Shared/Partials/_Menu.cshtml
+++ b/App.Admin/Views/Shared/Partials/_Menu.cshtml
@@ -36,7 +36,7 @@
             </a>
         </li>
         <li class="menu-item">
-            <a asp-action="Educations" class="menu-link">
+            <a asp-action="Educations" asp-controller="Education" class="menu-link">
                 <div>Educations</div>
             </a>
         </li>
