--- a/App.Admin/Views/Shared/Partials/_Menu.cshtml
+++ b/App.Admin/Views/Shared/Partials/_Menu.cshtml
@@ -31,7 +31,7 @@
             </a>
         </li>
         <li class="menu-item">
-            <a asp-action="PersonalInfo" class="menu-link">
+            <a asp-action="PersonalInfo" asp-controller="PersonalInfo" class="menu-link">
                 <div>Personal Info</div>
             </a>
         </li>
