UserController Added. UserService implemented.

--- a/App.Admin/Views/Shared/Partials/_Menu.cshtml
+++ b/App.Admin/Views/Shared/Partials/_Menu.cshtml
@@ -66,7 +66,7 @@
             </a>
         </li>
         <li class="menu-item">
-            <a asp-action="Users" class="menu-link">
+            <a asp-action="Users" asp-controller="User" class="menu-link">
                 <div>Users</div>
             </a>
         </li>
