--- a/App.Admin/Views/Shared/Partials/_Menu.cshtml
+++ b/App.Admin/Views/Shared/Partials/_Menu.cshtml
@@ -61,7 +61,7 @@
             </a>
         </li>
         <li class="menu-item">
-            <a asp-action="ContactMessages" class="menu-link">
+            <a asp-action="ContactMessages" asp-controller="ContactMessage" class="menu-link">
                 <div>Contact Messages</div>
             </a>
         </li>
