CommentController added. CommentService implemented.

--- a/App.Admin/Views/Shared/Partials/_Menu.cshtml
+++ b/App.Admin/Views/Shared/Partials/_Menu.cshtml
@@ -56,7 +56,7 @@
             </a>
         </li>
         <li class="menu-item">
-            <a asp-action="Comments" class="menu-link">
+            <a asp-action="Comments" asp-controller="Comment" class="menu-link">
                 <div>Comments</div>
             </a>
         </li>
