--- a/App.Admin/Views/Shared/Partials/_Menu.cshtml
+++ b/App.Admin/Views/Shared/Partials/_Menu.cshtml
@@ -51,7 +51,7 @@
             </a>
         </li>
         <li class="menu-item">
-            <a asp-action="BlogPosts" class="menu-link">
+            <a asp-action="BlogPosts" asp-controller="BlogPost" class="menu-link">
                 <div>Blog Posts</div>
             </a>
         </li>
