--- a/App.Client/Views/Home/Index/_BlogPosts.cshtml
+++ b/App.Client/Views/Home/Index/_BlogPosts.cshtml
@@ -23,7 +23,7 @@
                     <div class="text mt-3 float-right d-block">
                         <div class="d-flex align-items-center mb-3 meta">
                             <p class="mb-0">
-                                <span class="mr-2">@post.Date.ToString("MMMM dd, yyyy")</span>
+                                <span class="mr-2">@post.CreatedAt.ToString("MMMM dd, yyyy")</span>
                                 <a  class="mr-2">Admin</a>
                                 <a  class="meta-chat"><span class="icon-chat"></span> @post.Comments.Count</a>
                             </p>
