--- a/App.Admin/Views/Shared/Partials/_Menu.cshtml
+++ b/App.Admin/Views/Shared/Partials/_Menu.cshtml
@@ -26,7 +26,7 @@
         </li>
         <!-- Pages -->
         <li class="menu-item">
-            <a asp-action="AboutMe" class="menu-link">
+            <a asp-action="Index" asp-controller="AboutMe" class="menu-link">
                 <div>About Me</div>
             </a>
         </li>
