--- a/App.Admin/Views/Shared/_Layout.cshtml
+++ b/App.Admin/Views/Shared/_Layout.cshtml
@@ -37,5 +37,6 @@
     <!-- / Layout wrapper -->
     <partial name="Partials/_Loader.cshtml" />
     @await RenderSectionAsync("Scripts", required: false)
+    @await Component.InvokeAsync("NToastNotify")
 </body>
 </html>
