--- a/App.Admin/Views/Education/Edit.cshtml
+++ b/App.Admin/Views/Education/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using App.Shared.Models
-@model EducationViewModel
+@model EducationSaveViewModel
 
 @{
     ViewData["Title"] = "Edit Education";
@@ -10,39 +10,39 @@
     <div class="row">
         <h2>Edit Education</h2>
 
-        <form asp-action="Edit" asp-route-id="@Model.Id" method="post">
+        <form asp-action="Edit" method="post">
             <div class="mb-3">
-                <label asp-for="School" class="form-label">Okul</label>
+                <label asp-for="School" class="form-label"></label>
                 <input asp-for="School" class="form-control" required />
                 <span asp-validation-for="School" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
-                <label asp-for="Degree" class="form-label">Derece</label>
+                <label asp-for="Degree" class="form-label"></label>
                 <input asp-for="Degree" class="form-control" required />
                 <span asp-validation-for="Degree" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
-                <label asp-for="FieldOfStudy" class="form-label">Alan</label>
+                <label asp-for="FieldOfStudy" class="form-label"></label>
                 <input asp-for="FieldOfStudy" class="form-control" required />
                 <span asp-validation-for="FieldOfStudy" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
-                <label asp-for="StartDate" class="form-label">Başlangıç Tarihi</label>
+                <label asp-for="StartDate" class="form-label"></label>
                 <input asp-for="StartDate" type="date" class="form-control" required />
                 <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
-                <label asp-for="EndDate" class="form-label">Bitiş Tarihi</label>
+                <label asp-for="EndDate" class="form-label"></label>
                 <input asp-for="EndDate" type="date" class="form-control" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
 
-            <button type="submit" class="btn btn-primary">Düzenle</button>
-            <a asp-action="Experiences" class="btn btn-secondary">Back to List</a>
+            <button type="submit" class="btn btn-primary">Edit</button>
+            <a asp-action="Educations" class="btn btn-secondary">Back to List</a>
         </form>
     </div>
 </div>
