--- a/App.Admin/Views/Experience/Edit.cshtml
+++ b/App.Admin/Views/Experience/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using App.Shared.Models
-@model ExperienceViewModel
+@model ExperienceSaveViewModel
 
 @{
     ViewData["Title"] = "Edit Experience";
@@ -9,9 +9,7 @@
 <div class="container mt-3">
     <div class="row">
         <h2>Edit Experience</h2>
-        <partial name="Partials/ViewMessages" />
-
-        <form asp-action="Edit" asp-route-id="@Model.Id" method="post">
+        <form asp-action="Edit" method="post">
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
