--- a/App.Admin/Views/Project/Add.cshtml
+++ b/App.Admin/Views/Project/Add.cshtml
@@ -26,10 +26,11 @@
                 <label asp-for="ImageUrl" class="control-label"></label>
                 <input asp-for="ImageUrl" class="form-control" />
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
-            </div class="mt-3">
-
+            </div>
+            <div class="my-3">
             <button type="submit" class="btn btn-primary">Save</button>
             <a asp-action="Projects" class="btn btn-secondary">Cancel</a>
+            </div>
         </form>
     </div>
 </div>
