--- a/App.Admin/Views/Project/Projects.cshtml
+++ b/App.Admin/Views/Project/Projects.cshtml
@@ -36,7 +36,7 @@
                             <td>@project.ImageUrl</td>
                             <td>
                                 <a asp-action="Edit" asp-route-id="@project.Id">Edit</a> |
-                                <a asp-action="MakeInActive" asp-route-id="@project.Id">Make Inactive</a> |
+                                <a asp-action="MakeInActive" asp-route-id="@project.Id" onclick="return confirm('Are you sure you want to inactive this experience?');">Make Inactive</a> |
                                 <a asp-action="Delete" asp-route-id="@project.Id" onclick="return confirm('Are you sure you want to delete this experience?');">Delete</a>
                             </td>
                         </tr>
@@ -65,7 +65,7 @@
                             <td>@project.ImageUrl</td>
                             <td>
                                 <a asp-action="Edit" asp-route-id="@project.Id">Edit</a> |
-                                <a asp-action="MakeActive" asp-route-id="@project.Id">Make Active</a> |
+                                <a asp-action="MakeActive" asp-route-id="@project.Id" onclick="return confirm('Are you sure you want to active this experience?');">Make Active</a> |
                                 <a asp-action="Delete" asp-route-id="@project.Id" onclick="return confirm('Are you sure you want to delete this experience?');">Delete</a>
                             </td>
                         </tr>
