--- a/App.Admin/Views/Comment/Comments.cshtml
+++ b/App.Admin/Views/Comment/Comments.cshtml
@@ -1,10 +1,12 @@
 ﻿@using App.Shared.Models
+@using System.Security.Claims
 @model List<CommentViewModel>
 
 @{
     ViewData["Title"] = "Comments";
     var hasApprovedComments = Model.Any(c => c.IsApproved);
     var hasPendingComments = Model.Any(c => !c.IsApproved);
+    var currentUserId = User.Identity.IsAuthenticated ? User.FindFirst(ClaimTypes.NameIdentifier).Value : null;
 }
 
 <div class="container my-3">
@@ -42,8 +44,11 @@
                         </td>
                         <td>@comment.Content</td>
                         <td>
-                            <a asp-action="Edit" asp-route-id="@comment.Id">Edit</a> |
-                            <a asp-action="Delete" asp-route-id="@comment.Id" onclick="return confirm('Are you sure you want to delete this comment?');" >Delete</a>
+                            @if (comment.UserId.ToString() == currentUserId)
+                            {
+                                <a asp-action="Edit" asp-route-id="@comment.Id">Edit |</a>
+                            } 
+                            <a asp-action="Delete" asp-route-id="@comment.Id" onclick="return confirm('Are you sure you want to delete this comment?');">Delete</a>
                         </td>
                     </tr>
                 }
@@ -78,9 +83,12 @@
                         </td>
                         <td>@comment.Content</td>
                         <td>
-                            <a asp-action="Edit" asp-route-id="@comment.Id">Edit</a> |
-                            <a asp-action="Approve" asp-route-id="@comment.Id" onclick="return confirm('Are you sure you want to approve this comment?');" >Approve</a> |
-                            <a asp-action="Delete" asp-route-id="@comment.Id" onclick="return confirm('Are you sure you want to delete this comment?');" >Delete</a>
+                            @if (comment.UserId.ToString() == currentUserId)
+                            {
+                                <a asp-action="Edit" asp-route-id="@comment.Id">Edit |</a>
+                            }
+                            <a asp-action="Approve" asp-route-id="@comment.Id" onclick="return confirm('Are you sure you want to approve this comment?');">Approve</a> |
+                            <a asp-action="Delete" asp-route-id="@comment.Id" onclick="return confirm('Are you sure you want to delete this comment?');">Delete</a>
                         </td>
                     </tr>
                 }
@@ -91,7 +99,6 @@
 
 @section Scripts {
     <script>
-        // Sayfa açıldığında varsayılan olarak onaylı yorumları göster
         document.addEventListener('DOMContentLoaded', function () {
             showApproved();
         });
