--- a/App.Admin/Views/Project/Add.cshtml
+++ b/App.Admin/Views/Project/Add.cshtml
@@ -1,5 +1,5 @@
 ﻿@using App.Shared.Models
-@model ProjectViewModel
+@model ProjectAddViewModel
 
 @{
     ViewData["Title"] = "Add Project";
@@ -8,25 +8,26 @@
 <div class="container mt-3">
     <div class="row">
         <h2>Add New Project</h2>
-        <partial name="Partials/ViewMessages" />
+
         <form asp-action="Add" method="post">
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
+                <input asp-for="Title" class="form-control" required/>
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <textarea asp-for="Description" class="form-control"></textarea>
+                <textarea asp-for="Description" class="form-control" required></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <label asp-for="ImageUrl" class="control-label"></label>
-                <input asp-for="ImageUrl" class="form-control" />
-                <span asp-validation-for="ImageUrl" class="text-danger"></span>
+            <div class="form-group my-3">
+                <label asp-for="Image" class="control-label"></label>
+                <input asp-for="Image" type="file" class="form-control-file" required />
+                <span asp-validation-for="Image" class="text-danger"></span>
             </div>
+
             <div class="my-3">
             <button type="submit" class="btn btn-primary">Save</button>
             <a asp-action="Projects" class="btn btn-secondary">Cancel</a>
